styles.css
:root {
  /* colors */
  --background-tan: #f5f3eb;
  --blue: #b7d0d9;
  --dark-grey: #9f9fa1;
  --light-grey: #dfddd5;
  --almost-black: #20221e;
  --tan: #ded4c4;

  /* opacities? */
  --link-hover-opacity: 0.5;
  --link-active-opacity: 0.3;

  /* fonts */
  --im-fell-english: 'IM Fell English', serif;
  --lobster: 'Lobster', cursive;

  /* spacing */
  --section-margin-mobile: 3rem;
  --section-margin-desktop: 8rem;
  --content-width-desktop: 800px;
  --content-width-desktop-breakout: 900px;
}

html {
  font-family: var(--im-fell-english);
  color: var(--almost-black);
  text-align: center;
}

body {
  margin: 0;
  background-color: var(--background-tan);
  display: grid;
}

figure {
  margin: 0;
}

h1,
h2 {
  line-height: 1;
}

h2 {
  margin: 1.2rem;
  font-size: 2rem;
}

a {
  color: inherit;
}

p,
ul {
  line-height: 1.75;
  font-size: 1.3rem;
  margin: 1.5rem auto;
}

p {
  max-width: var(--content-width-desktop);
}

address {
  font-style: inherit;
}

.placeholder-screen {
  height: 200vh;
}

.header {
  display: grid;
  align-content: center;
  align-items: center;
  margin-bottom: var(--section-margin-mobile);
}

.names {
  --name-horizontal-spacing: 2vw;

  font-size: 3rem;
  font-weight: 700;
  display: inline-grid;
  grid-template-rows: repeat(3, auto);
  justify-content: center;
  align-items: baseline;
  margin: 0.55em 0;
}

.name {
  font-family: var(--im-fell-english);
}

.julia {
  justify-self: flex-end;
  margin-right: var(--name-horizontal-spacing);
}

.david {
  justify-self: flex-start;
  margin-left: var(--name-horizontal-spacing);
}

.and {
  font-family: 'IM Fell English', serif;
  font-size: 0.75em;
  color: var(--dark-grey);
}

.saengerbund-drawing-container {
  aspect-ratio: 1227 / 511;
  justify-self: center;
  margin: 0 3rem;
}

.saengerbund-drawing,
.couple-photo {
  display: block;
  object-fit: contain;
  height: 100%;
  width: 100%;
}

.nav-container {
  display: none;
  position: sticky;
  top: 0;
  padding: 1.5rem 0;
  background-color: var(--background-tan);
}

.nav-list {
  list-style: none;
  padding: 0 3rem;
  margin: 0;
  display: grid;
  justify-content: center;
  align-items: center;
  grid-column-gap: 5vw;
  font-weight: bold;
  font-size: 1.75rem;
  background-color: var(--background-tan);
  line-height: 1;
}

.nav-link {
  color: var(--almost-black);
  text-decoration: none;
}

.nav-link:active {
  opacity: var(--link-active-opacity);
}

.couple-photo-container {
  display: grid;
  place-items: center;
}

.couple-photo {
  aspect-ratio: 620 / 839;
  max-height: 50rem;
}

.content-section {
  padding: 0 1.5rem;
}

.content-section + .content-section {
  margin-top: var(--section-margin-mobile);
}

.date-location-container {
  display: grid;
  align-items: center;
  grid-row-gap: 3rem;
}

.date,
.location-name {
  font-size: 1.7rem;
  font-weight: 700;
}

.date,
.location-name,
.location-address {
  margin: 0;
}

.map {
  height: 100%;
  width: 100%;
}

.map-container {
  width: 100%;
  height: 400px;
  max-width: calc(var(--content-width-desktop) * 1.6666667);
  margin: 0 auto;
}

.rsvp-form-container {
  margin: 0 auto;
  max-width: var(--content-width-desktop);
  height: 85vh;
}

.rsvp-form {
  object-fit: contain;
  width: 100%;
  height: 100%;
}

.photo-collage {
  display: flex;
  justify-content: space-between;
  flex-flow: row wrap;
  gap: 1.5rem;
  align-items: center;
  max-width: calc(var(--content-width-desktop-breakout) * 0.75);
  margin: 2rem auto;
}

.photo-collage-picture {
  flex: 1 1 15rem;
}

.photo-collage-picture img {
  display: block;
  object-fit: contain;
  width: 100%;
  height: auto;
}

.goofy-pose-photo {
  max-width: 100%;
  height: auto;
}

.attire-links {
  max-width: var(--content-width-desktop);
  text-align: left;
}

.link-list {
  list-style: none;
  padding: 2rem 0 0 0;
}

.link-list-item {
  padding: 0;
}

.link-list-item + .link-list-item {
  margin-top: 4rem;
}

.link-list-item h3 {
  margin: 0;
  line-height: 1;
  font-weight: 700;
  font-size: 1.5rem;
}

.link-list-item p {
  margin: 0 auto;
  font-size: 1.3rem;
  line-height: 1.5;
}

* + .link-list-item p {
  margin: 1rem auto;
}

.more-details {
  font-size: 2rem;
  margin-top: 8rem;
  margin-bottom: 12rem;
}

@media (min-width: 900px) {
  body {
    padding-bottom: 8rem;
  }

  h2 {
    font-size: 3rem;
  }

  [id] {
    scroll-margin-top: 6rem;
  }

  .names {
    --name-horizontal-spacing: 2rem;

    font-weight: 400;
    font-size: 4.6rem;
    grid-template-columns: 1fr min-content 1fr;
    margin-bottom: 0.3em;
  }

  .julia {
    justify-self: flex-end;
  }

  .david {
    justify-self: flex-start;
  }

  .and {
    font-size: 0.6em;
  }

  .saengerbund-drawing-container {
    height: 14rem;
  }

  .nav-container {
    display: block;
    margin-bottom: 2rem;
    order: 0;
    padding: 1.2rem 0;
  }

  .nav-list {
    grid-auto-flow: column;
    grid-column-gap: 2rem;
    font-size: 1.3rem;
  }

  .content-section {
    padding: 0 2rem;
  }

  .content-section + .content-section {
    margin-top: var(--section-margin-desktop);
  }

  .date,
  .location-name {
    font-size: 3rem;
  }

  .location-address {
    font-size: 2rem;
  }

  .rsvp-form-container {
    height: clamp(400px, 60vh, 800px);
  }

  .photo-collage {
    margin: 4rem auto;
  }

  .goofy-photos {
    max-width: var(--content-width-desktop-breakout);
    margin: 0 auto 5rem auto;
  }

  .goofy-photo-figure {
    display: flex;
  }

  .goofy-photo-caption {
    flex: 0 2 16rem;
    margin-top: 0.6rem;
  }

  .goofy-photo-figure.julia {
    justify-content: flex-end;
  }

  .goofy-photo-figure.julia .goofy-photo-caption {
    margin-right: 2rem;
    text-align: right;
  }

  .goofy-photo-figure.david .goofy-photo-caption {
    text-align: left;
    order: 1;
  }

  .goofy-pose-photo {
    max-width: 20rem;
    flex-shrink: 0;
  }

  .attire-links {
    max-width: calc(var(--content-width-desktop) * 0.6666667);
  }
}

@media (hover: hover) and (pointer: fine) {
  a:hover {
    opacity: var(--link-hover-opacity);
  }

  a:active {
    opacity: var(--link-active-opacity);
  }
}

